# python-boilerplate

./: .commitlintrc.yaml  .dockerignore  .env.schema  .env.template  .gitattributes  .gitignore  .ls-lint.yml  .pre-commit-config.yaml  .trivyignore  .yamlignore  .yamllint  CONTRIBUTING.md  GOOD_PRACTICES.md  Justfile  LIBRARIES.md  LICENSE  Makefile  README.md  README_app.md  TOOLS.md  app-name.code-workspace  app.code-workspace  checkov.yaml  init.sh  pyproject.toml  renovate.json  requirements-dev.txt  requirements-test.txt  requirements.txt
.azuredevops/: pull_request_template.md
.githooks/: freeze.sh  helm-chart.sh  helm-lint.sh  ls-lint.sh  pre-validate-user-email.sh  readme_update.py  uv-requirements.sh  varlock.sh
config/: .commitlintrc.yaml  .gitlint  .ls-lint.yml  .yamllint
deploy/: README.md
doc/: env.csv
docker/: Dockerfile  alpine.Dockerfile  compose.yaml  debian.Dockerfile  entrypoint.sh  healthcheck.py  wheel.Dockerfile
helm_chart/secret_templates/: app-name.env
requirements/: requirements-dev.txt  requirements-test.txt  requirements.txt
src/app/: main.py
src/app/common/: config.py  decorator.py  log.py  path_translator.py  profiler.py
src/app_name/: main.py
src/app_name/common/: config.py  debug.py  path_translator.py  profiler.py
src/app_name/database/: oracle.py
src/app_name/event/: cloud_event_formatter.py  colors.py  level.py  log.py  publisher.py
src/app_name/event/formatter/: cloudevent.py  colors.py  custom.py  json_f.py
src/app_name/event/handler/: amqp.py  print.py
src/app_name/event/logger/: amqp.py  log.py
test/: pytest.ini
tools/: README.md  TOOLS.md
